objects/DemoObj__c.object
<CustomObject>
    <fields>
        <fullName>myEncrypted__c</fullName>
        <label>myEncryptedField</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>testDate__c</fullName>
        <label>testDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>testgeofield__c</fullName>
        <label>testgeofield</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>testtext__c</fullName>
        <label>testtext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DemoObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DemoObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>